Dodany członek zespołu

--- a/Szyfrowanie + kompresja/sprawozdanie.ipynb
+++ b/Szyfrowanie + kompresja/sprawozdanie.ipynb
@@ -10,6 +10,7 @@
     "Członkowie zespołu:\n",
     "- Jarosław Dakowicz\n",
     "- Piotr Kozioł\n",
+    "- Anton Maisiuk\n",
     "\n",
     "## Instalacja środowiska\n",
     "\n",
