✨ stegonography proof of concept (works for 1,2,4 bits)

--- a/Steganografia - testy narzędzi/sprawozdanie.ipynb
+++ b/Steganografia - testy narzędzi/sprawozdanie.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Steganografia - testy narzędzi\n",
-    "Najnowsza wersja sprawozdania jest dostępna pod adresem: [https://github.com/Gombek7/techniki-poufnosci/blob/main/Steganografia - testy narzędzi/sprawozdanie.md](https://github.com/Gombek7/techniki-poufnosci/blob/main/Steganografia%20-%20testy%20narz%C4%99dzi/sprawozdanie.md)\n",
+    "Najnowsza wersja sprawozdania jest dostępna pod adresem: [https://github.com/Gombek7/techniki-poufnosci/blob/main/Steganografia%20-%20testy%20narz%C4%99dzi/sprawozdanie.ipynb](https://github.com/Gombek7/techniki-poufnosci/blob/main/Steganografia%20-%20testy%20narz%C4%99dzi/sprawozdanie.ipynb)\n",
     "\n",
     "Członkowie zespołu:\n",
     "- Jarosław Dakowicz\n",
@@ -46,6 +46,634 @@
     "- ilość bitów ma być zmienna, od 1 do 4,\n",
     "- dokonaj oceny wizualnej głębokości zmian pliku źródłowego w zależności od ilości bitów modyfikowanych."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[33m7\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0b11100000 >> 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "function* getBitsIterator(bytes: Uint8Array, bits: 1 | 2 | 3 | 4) {\n",
+    "    switch (bits) {\n",
+    "        case 1:\n",
+    "            for (const byte of bytes) {\n",
+    "                yield (byte & 0b10000000) >> 7;\n",
+    "                yield (byte & 0b01000000) >> 6;\n",
+    "                yield (byte & 0b00100000) >> 5;\n",
+    "                yield (byte & 0b00010000) >> 4;\n",
+    "                yield (byte & 0b00001000) >> 3;\n",
+    "                yield (byte & 0b00000100) >> 2;\n",
+    "                yield (byte & 0b00000010) >> 1;\n",
+    "                yield (byte & 0b00000001);\n",
+    "            }\n",
+    "            break;\n",
+    "        case 2:\n",
+    "            for (const byte of bytes) {\n",
+    "                yield (byte & 0b11000000) >> 6;\n",
+    "                yield (byte & 0b00110000) >> 4;\n",
+    "                yield (byte & 0b00001100) >> 2;\n",
+    "                yield (byte & 0b00000011);\n",
+    "            }\n",
+    "            break;\n",
+    "        case 3:\n",
+    "            {\n",
+    "                let buffer = 0; // Holds the current bits buffer\n",
+    "                let bufferLength = 0; // Number of bits available in the buffer\n",
+    "\n",
+    "                for (const byte of bytes) {\n",
+    "                    buffer = (buffer << 8) | byte; // Add new byte to the buffer\n",
+    "                    bufferLength += 8; // Update buffer length\n",
+    "\n",
+    "                    while (bufferLength >= 3) { // Emit as long as we can get 3 bits\n",
+    "                        yield (buffer >> (bufferLength - 3)) & 0b111; // Extract top 3 bits\n",
+    "                        bufferLength -= 3; // Reduce buffer length\n",
+    "                    }\n",
+    "                }\n",
+    "\n",
+    "                // Handle leftover bits (if any) by padding with zeros\n",
+    "                if (bufferLength > 0) {\n",
+    "                    yield (buffer << (3 - bufferLength)) & 0b111; // Pad with zeros\n",
+    "                }\n",
+    "            }\n",
+    "            break;\n",
+    "        case 4:\n",
+    "            for (const byte of bytes) {\n",
+    "                yield (byte & 0b11110000) >> 4;\n",
+    "                yield (byte & 0b00001111);\n",
+    "            }\n",
+    "            break;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "45\n",
+      "53\n",
+      "48\n",
+      "45\n",
+      "54\n",
+      "59\n",
+      "47\n",
+      "60\n",
+      "58\n",
+      "44\n",
+      "60\n",
+      "57\n",
+      "46\n",
+      "62\n",
+      "58\n",
+      "45\n",
+      "62\n",
+      "57\n",
+      "45\n",
+      "61\n",
+      "63\n",
+      "52\n",
+      "67\n",
+      "57\n",
+      "51\n",
+      "61\n",
+      "56\n",
+      "48\n",
+      "62\n",
+      "64\n",
+      "52\n",
+      "65\n",
+      "66\n",
+      "50\n",
+      "66\n",
+      "65\n",
+      "54\n",
+      "64\n",
+      "61\n",
+      "49\n",
+      "62\n",
+      "66\n",
+      "51\n",
+      "65\n",
+      "62\n",
+      "46\n",
+      "61\n",
+      "63\n",
+      "48\n",
+      "61\n",
+      "61\n",
+      "50\n",
+      "65\n",
+      "62\n",
+      "51\n",
+      "60\n",
+      "62\n",
+      "48\n",
+      "60\n",
+      "69\n",
+      "54\n",
+      "65\n",
+      "60\n",
+      "47\n",
+      "60\n",
+      "69\n",
+      "53\n",
+      "66\n",
+      "68\n",
+      "52\n",
+      "66\n",
+      "73\n",
+      "59\n",
+      "69\n",
+      "73\n",
+      "59\n",
+      "64\n",
+      "77\n",
+      "61\n",
+      "70\n",
+      "83\n",
+      "67\n",
+      "68\n",
+      "85\n",
+      "67\n",
+      "72\n",
+      "87\n",
+      "69\n",
+      "75\n",
+      "90\n",
+      "74\n",
+      "77\n",
+      "95\n",
+      "78\n",
+      "77\n",
+      "88\n",
+      "74\n",
+      "76\n",
+      "92\n",
+      "77\n",
+      "83\n",
+      "89\n",
+      "72\n",
+      "77\n",
+      "94\n",
+      "77\n",
+      "77\n",
+      "93\n",
+      "78\n",
+      "78\n",
+      "91\n",
+      "73\n",
+      "79\n",
+      "92\n",
+      "79\n",
+      "81\n",
+      "91\n",
+      "73\n",
+      "76\n",
+      "88\n",
+      "74\n",
+      "79\n",
+      "98\n",
+      "80\n",
+      "82\n",
+      "96\n",
+      "80\n",
+      "81\n",
+      "100\n",
+      "84\n",
+      "87\n",
+      "101\n",
+      "91\n",
+      "86\n",
+      "106\n",
+      "89\n",
+      "91\n",
+      "106\n",
+      "93\n",
+      "88\n",
+      "110\n",
+      "92\n",
+      "92\n",
+      "109\n",
+      "99\n",
+      "93\n",
+      "115\n",
+      "97\n",
+      "94\n",
+      "114\n",
+      "101\n",
+      "93\n",
+      "114\n",
+      "97\n",
+      "92\n",
+      "113\n",
+      "102\n",
+      "96\n",
+      "113\n",
+      "103\n",
+      "96\n",
+      "117\n",
+      "104\n",
+      "98\n",
+      "116\n",
+      "105\n",
+      "99\n",
+      "116\n",
+      "106\n",
+      "100\n",
+      "116\n",
+      "105\n",
+      "103\n",
+      "116\n",
+      "106\n",
+      "103\n",
+      "120\n",
+      "108\n",
+      "103\n",
+      "122\n",
+      "111\n",
+      "100\n",
+      "123\n",
+      "111\n",
+      "104\n",
+      "125\n",
+      "113\n",
+      "106\n",
+      "131\n",
+      "119\n",
+      "108\n",
+      "133\n",
+      "126\n",
+      "119\n",
+      "138\n",
+      "129\n",
+      "122\n",
+      "146\n",
+      "133\n",
+      "125\n",
+      "146\n",
+      "132\n",
+      "127\n",
+      "143\n",
+      "132\n",
+      "125\n",
+      "148\n",
+      "138\n",
+      "133\n",
+      "154\n",
+      "141\n",
+      "132\n",
+      "159\n",
+      "147\n",
+      "135\n",
+      "160\n",
+      "148\n",
+      "132\n",
+      "160\n",
+      "---\n",
+      "53\n",
+      "45\n",
+      "53\n",
+      "48\n",
+      "45\n",
+      "54\n",
+      "59\n",
+      "47\n",
+      "60\n",
+      "58\n",
+      "44\n",
+      "60\n",
+      "57\n",
+      "46\n",
+      "62\n",
+      "58\n",
+      "45\n",
+      "62\n",
+      "57\n",
+      "45\n",
+      "61\n",
+      "63\n",
+      "52\n",
+      "67\n",
+      "57\n",
+      "51\n",
+      "61\n",
+      "56\n",
+      "48\n",
+      "62\n",
+      "64\n",
+      "52\n",
+      "65\n",
+      "66\n",
+      "50\n",
+      "66\n",
+      "65\n",
+      "54\n",
+      "64\n",
+      "61\n",
+      "49\n",
+      "62\n",
+      "66\n",
+      "51\n",
+      "65\n",
+      "62\n",
+      "46\n",
+      "61\n",
+      "63\n",
+      "48\n",
+      "61\n",
+      "61\n",
+      "50\n",
+      "65\n",
+      "62\n",
+      "51\n",
+      "60\n",
+      "62\n",
+      "48\n",
+      "60\n",
+      "69\n",
+      "54\n",
+      "65\n",
+      "60\n",
+      "47\n",
+      "60\n",
+      "69\n",
+      "53\n",
+      "66\n",
+      "68\n",
+      "52\n",
+      "66\n",
+      "73\n",
+      "59\n",
+      "69\n",
+      "73\n",
+      "59\n",
+      "64\n",
+      "77\n",
+      "61\n",
+      "70\n",
+      "83\n",
+      "67\n",
+      "68\n",
+      "85\n",
+      "67\n",
+      "72\n",
+      "87\n",
+      "69\n",
+      "75\n",
+      "90\n",
+      "74\n",
+      "77\n",
+      "95\n",
+      "78\n",
+      "77\n",
+      "88\n",
+      "74\n",
+      "76\n",
+      "92\n",
+      "77\n",
+      "83\n",
+      "89\n",
+      "72\n",
+      "77\n",
+      "94\n",
+      "77\n",
+      "77\n",
+      "93\n",
+      "78\n",
+      "78\n",
+      "91\n",
+      "73\n",
+      "79\n",
+      "92\n",
+      "79\n",
+      "81\n",
+      "91\n",
+      "73\n",
+      "76\n",
+      "88\n",
+      "74\n",
+      "79\n",
+      "98\n",
+      "80\n",
+      "82\n",
+      "96\n",
+      "80\n",
+      "81\n",
+      "100\n",
+      "84\n",
+      "87\n",
+      "101\n",
+      "91\n",
+      "86\n",
+      "106\n",
+      "89\n",
+      "91\n",
+      "106\n",
+      "93\n",
+      "88\n",
+      "110\n",
+      "92\n",
+      "92\n",
+      "109\n",
+      "99\n",
+      "93\n",
+      "115\n",
+      "97\n",
+      "94\n",
+      "114\n",
+      "101\n",
+      "93\n",
+      "114\n",
+      "97\n",
+      "92\n",
+      "113\n",
+      "102\n",
+      "96\n",
+      "113\n",
+      "103\n",
+      "96\n",
+      "117\n",
+      "104\n",
+      "98\n",
+      "116\n",
+      "105\n",
+      "99\n",
+      "116\n",
+      "106\n",
+      "100\n",
+      "116\n",
+      "105\n",
+      "103\n",
+      "116\n",
+      "106\n",
+      "103\n",
+      "120\n",
+      "108\n",
+      "103\n",
+      "122\n",
+      "111\n",
+      "100\n",
+      "123\n",
+      "111\n",
+      "104\n",
+      "125\n",
+      "113\n",
+      "106\n",
+      "131\n",
+      "119\n",
+      "108\n",
+      "133\n",
+      "126\n",
+      "119\n",
+      "138\n",
+      "129\n",
+      "122\n",
+      "146\n",
+      "133\n",
+      "125\n",
+      "146\n",
+      "132\n",
+      "127\n",
+      "143\n",
+      "132\n",
+      "125\n",
+      "148\n",
+      "138\n",
+      "133\n",
+      "154\n",
+      "141\n",
+      "132\n",
+      "159\n",
+      "147\n",
+      "135\n",
+      "160\n",
+      "148\n",
+      "132\n",
+      "160\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32m\"To jest jakiś dłuższy tekst. Czy widać różnicę?\"\u001b[39m"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "//@deno-types=\"npm:@types/bmp-js\"\n",
+    "import { decode, encode } from \"npm:bmp-js\";\n",
+    "import fs from \"node:fs\";\n",
+    "import type { Buffer } from \"node:buffer\";\n",
+    "\n",
+    "function embedText(inputFile: Buffer, text: string, bits: 1 | 2 | 3 | 4) {\n",
+    "    const bmpData = decode(inputFile);\n",
+    "    const textEncoder = new TextEncoder();\n",
+    "    const textBytes = textEncoder.encode(text + \"\\0\");\n",
+    "    const bitsIterator: Generator<number, void, unknown> = getBitsIterator(\n",
+    "        textBytes,\n",
+    "        bits,\n",
+    "    );\n",
+    "    let i = 0;\n",
+    "    const mask = 255 << bits;\n",
+    "    for (const chunk of bitsIterator) {\n",
+    "        // don't write to alpha channel\n",
+    "        if (!(i % 4)) i++;\n",
+    "\n",
+    "        bmpData.data[i] = (bmpData.data[i] & mask) | chunk;\n",
+    "        console.log(bmpData.data[i]);\n",
+    "        i++;\n",
+    "    }\n",
+    "    console.log(\"---\");\n",
+    "    return encode(bmpData);\n",
+    "}\n",
+    "\n",
+    "const bmpBuffer = fs.readFileSync(\"cat.bmp\");\n",
+    "const bmpModified = embedText(bmpBuffer, \"To jest jakiś dłuższy tekst. Czy widać różnicę?\", 2);\n",
+    "\n",
+    "fs.writeFileSync(\"catModified.bmp\", bmpModified.data);\n",
+    "\n",
+    "function readEmbeddedText(inputFile: Buffer, bits: 1 | 2 | 3 | 4) {\n",
+    "    const bmpData = decode(inputFile);\n",
+    "    const mask = 255 >> (8 - bits);\n",
+    "\n",
+    "    const readBytes: number[] = [];\n",
+    "    let chunkBuffer = 0;\n",
+    "    let chunkLeftLength = 8;\n",
+    "    let i = -1;\n",
+    "    for (const byte of bmpData.data) {\n",
+    "        // don't read from alpha channel\n",
+    "        if (!(++i % 4)) continue; \n",
+    "        \n",
+    "        console.log(byte);\n",
+    "        const chunk = byte & mask;\n",
+    "\n",
+    "        chunkBuffer = chunkBuffer << bits;\n",
+    "        chunkBuffer = chunkBuffer | chunk;\n",
+    "        chunkLeftLength -= bits;\n",
+    "\n",
+    "        if (chunkLeftLength === 0) {\n",
+    "            readBytes.push(chunkBuffer);\n",
+    "            // end if found '\\0' character\n",
+    "            if (chunkBuffer === 0) {\n",
+    "                break;\n",
+    "            }\n",
+    "            chunkBuffer = 0;\n",
+    "            chunkLeftLength = 8;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    const textDecoder = new TextDecoder();\n",
+    "    return textDecoder.decode(new Uint8Array(readBytes)).slice(0, -1);\n",
+    "}\n",
+    "\n",
+    "const readFile = fs.readFileSync(\"catModified.bmp\");\n",
+    "readEmbeddedText(readFile, 2);\n"
+   ]
   }
  ],
  "metadata": {
@@ -61,7 +689,7 @@
    "name": "typescript",
    "nbconvert_exporter": "script",
    "pygments_lexer": "typescript",
-   "version": "5.5.2"
+   "version": "5.6.2"
   }
  },
  "nbformat": 4,
