--- a/Steganografia - testy narzędzi/sprawozdanie.ipynb
+++ b/Steganografia - testy narzędzi/sprawozdanie.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do wizualnego porównania zdjęcia dla różnych długości bitów będzie potrzebny dłuższy tekst. W tym celu pobrany został skrypt filmu \"Fil o pszczołach\"."
+    "Do wizualnego porównania zdjęcia dla różnych długości bitów będzie potrzebny dłuższy tekst. W tym celu pobrany został skrypt filmu pod tytułem \"Film o pszczołach\"."
    ]
   },
   {
