⚗️ stegonography programs testing done

--- a/Steganografia - testy narzędzi/sprawozdanie.ipynb
+++ b/Steganografia - testy narzędzi/sprawozdanie.ipynb
@@ -33,7 +33,74 @@
     "\n",
     "Na podstawie listy ze strony [Wikipedii](https://en.wikipedia.org/wiki/Steganography_tools) wybierz 5 narzędzi steganograficznych i dokonaj ich oceny (badań):\n",
     "- porównaj szybkość działania dla tego samego pliku,\n",
-    "- jeżeli to możliwe, to oceń ilość/jakość zmian pliku źródłowego.\n"
+    "- jeżeli to możliwe, to oceń ilość/jakość zmian pliku źródłowego.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strona Wikipedii dotycząca narzędzi steganograficznych została z niejasnych powodów zmodyfikowana i lista programów została usunięta. Na szczęście można było otworzyć historyczną wersję artykułu. Zostały wybrane narzędzia podane w poniższej tabeli.\n",
+    "\n",
+    "| Nazwa i źródło | Opis | Interfejs aplikacji |\n",
+    "| :- | :- | :-: | \n",
+    "| [ImageSpyer G2](https://freesoft.net/windows/imagespyer_g2) | Narzędzie, które pozwala ukrywać informacje w obrazach przy użyciu metod nowoczesnej steganografii. Dane będą szyfrowane za pomocą dwuwarstwowej ochrony kryptograficznej, która obejmuje ponad dwadzieścia bloków szyfrujących i algorytm kryptograficzny oparty na strumieniu. Zastosowane w programie mechanizmy mają na celu nie tylko ukrycie samego faktu dostępności danych, ale również zagwarantowanie ich ochrony przed ewentualnymi atakami. | ![gui-ImageSpyer](./img/gui-ImageSpyer.png) |\n",
+    "| [S-Tools](https://www.insecure.in/blog/image-steganography-with-s-tools) | Wszechstronne i potężne narzędzie steganograficzne służące do ukrywania informacji w plikach cyfrowych, głównie obrazach i plikach audio. Osiąga to poprzez subtelną zmianę najmniej znaczących bitów (LSB) pliku nośnego w celu osadzenia ukrytych danych bez zauważalnego wpływu na wizualną lub dźwiękową jakość nośnika. Obsługuje przede wszystkim formaty obrazów, takie jak JPEG, BMP i GIF, a także formaty audio, takie jak WAV. | ![gui-S-Tools](./img/gui-S-Tools.png) |\n",
+    "| [Steg](https://www.fabionet.org/) | Wieloplatformowe i przenośne oprogramowanie napisane w C++. Wykorzystuje techniki steganografii i kryptografii do ukrywania informacji w nieskompresowanych i skompresowanych obrazach. Obsługiwane są formaty obrazów JPEG (JPG), TIFF, PNG, BMP. Program ukrywa dowolne dane wewnątrz samego obrazu (nie w polach metadanych/komentarzy lub dołączonych na końcu pliku) | ![gui-Sted](./img/gui-Steg.png) |\n",
+    "| [StegaMail](http://mangocats.com/stegamail/) | Aplikacja umożliwiająca ukrywanie tekstu w plikach graficznych. Tekst jest zakodowany w informacjach o kolorze obrazu, można używać wszystkich formatów obrazu obsługiwanych przezbibliotekę Qt, ale zakodowany obraz musi używać formatu bezstratnego, takiego jak png lub bmp. | ![gui-Stegamail](./img/gui-Stegamail.png) |\n",
+    "| [Virtual Steganographic Laboratory for Digital Images (VSL)](https://vsl.sourceforge.net/) | graficzne narzędzie do tworzenia schematów blokowych, które umożliwia kompleksowe wykorzystanie, testowanie i dostosowywanie metod zarówno do steganografii obrazu, jak i steganalizy. | ![gui-vls](./img/gui-vls.png) |\n",
+    "\n",
+    "\n",
+    "Założenia:\n",
+    "\n",
+    "- Aby łatwiej dostrzec różnicę wydajności między programami wybrano duży plik wejściowy - obraz bmp o rozmiarze 35,8MB.\n",
+    "\n",
+    "- Do osadzania wybrano archiwum zip o rozmiarze 3,32MB zawierające 3 zdjęcia w formacie JPG. Dzięki temu uyskano pewność, że dane binarne do osadzenia są wysokiej entropii. Początkowo zakładano użycie większego pliku, jednak program S-Tools obłsuguje mniejsze rozmiary plików niż pozostałe aplikacje. Prawdopodobnie używa tylko 1 bitu do osadzania danych i nie pozwala zmienić tego ustawienia.\n",
+    "\n",
+    "- Badane programy miały zazywczaj domyślnie włączoną funkcję kompresji. Nie jest to przedmiotem badań, dlatego została wyłączona.\n",
+    "\n",
+    "- Wszystkie wybrane programy opierają się na interfejsie graficznym oraz nie wszystkie mierzą czasy wykonywania operacji. Tam, gdzie nie było innej możliwości, czasy osadzania i wyodrębniania danych zostały zmierzone stoperem.\n",
+    "\n",
+    "- Niektóre programy używają szyfrowania, którego nie dało się wyłączyć.\n",
+    "\n",
+    "- Badania zostały wykonane w Windows Sandbox - tymczasowej maszynie wirtualnej dostępnej w systemach operacyjnych Windows 10 i 11. Programy były pobierane z podejrzanych źródeł i mogą zawierać malware.\n",
+    "\n",
+    "Poniższa tabela przedstawia wyniki pomiarów.\n",
+    "\n",
+    "| Program | Szyfrowanie | Czas osadzania | Czas wyodrębniania | \n",
+    "| :- | :- | :- | :- |\n",
+    "| ImageSpyer G2 | Tak | 15s | 45s |\n",
+    "| S-Tools | Tak | 9s | 9s |\n",
+    "| Steg | Tak | 3s | 3s |\n",
+    "| StegaMail | Nie | 3s | 7s |\n",
+    "| VSL | Nie | 5s | 3s |\n",
+    "\n",
+    "Najszybszy okazał się program Steg, jednak wydajność programów StegaMail i VSL była podobna. Od wyników znacznie odbiegał ImageSpyer. Prawdopodobnie użyte szyfrowanie zwiększa objętość danych do osadzenia. Przy wyodrębnianu ImageSpyer prawdopodobnie musi odczytać cały plik, nawet jeśli dane były mniejsze."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poniższa tabela przedstawia zestawienie wycinków obrazów o wymiarach 600x600 pikseli. Wybrany fragment zawiera obszar o równomiernym kolorze, na którym najłatwiej będzie dostrzec wprowadzone zmiany.\n",
+    "\n",
+    "| Obraz oryginalny | ![](./img/bmp-original.png) | \n",
+    "| :- | :- |\n",
+    "| ImageSpyer G2 |  ![](./img/bmp-ImageSpyer.png) |\n",
+    "| S-Tools |  ![](./img/bmp-S-Tools.png) |\n",
+    "| Steg | ![](./img/bmp-steg.png) |\n",
+    "| StegaMail | ![](./img/bmp-StegaMail.png) |\n",
+    "| VSL | ![](./img/bmp-VSL.png) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zmiany w obrazie są widoczne jedynie dla programu ImageSpyer G2. Prawdopodobnie używa on większej ilości bitów niż pozostałe programy, nawet gdyby dane zmieściły by się przy modyfikacji 1 bitu.\n",
+    "Program StegaMail dodaje znak wodny w wersji darmowej, jednak pozostała część obrazu nie różni się widocznie od oryginału."
    ]
   },
   {
@@ -44,7 +111,9 @@
     "\n",
     "Wykonaj prosty system steganograficzny plików graficznych BMP polegający na osadzaniu w najmniej znaczących bitach danego stegotekstu:\n",
     "- ilość bitów ma być zmienna, od 1 do 4,\n",
-    "- dokonaj oceny wizualnej głębokości zmian pliku źródłowego w zależności od ilości bitów modyfikowanych."
+    "- dokonaj oceny wizualnej głębokości zmian pliku źródłowego w zależności od ilości bitów modyfikowanych.\n",
+    "\n",
+    "---"
    ]
   },
   {
