✏️ typo, fix ts type

--- a/Steganografia - testy narzędzi/sprawozdanie.ipynb
+++ b/Steganografia - testy narzędzi/sprawozdanie.ipynb
@@ -397,7 +397,7 @@
    "source": [
     "const bmpOriginalBuffer = fs.readFileSync(\"cat.bmp\");\n",
     "for (let i = 1; i <=4; i++) {\n",
-    "    const bmpModified = embedText( bmpOriginalBuffer, beeMovieScript, i);\n",
+    "    const bmpModified = embedText( bmpOriginalBuffer, beeMovieScript, i as 1 | 2 | 3 | 4);\n",
     "    fs.writeFileSync(`cat${i}.bmp`, bmpModified.data);\n",
     "}\n",
     "\n",
@@ -419,7 +419,7 @@
     "- Dla 1 bitu różnica jest niedostrzealna gołym okiem. Różnica między kolorem oryginalnym to zaledwie 0.4% (dla każdego kanału).\n",
     "- Dla 2 bitów wprawne oko po przybliżeniu może dostrzec, że pojawił się charakterystyczny szum.\n",
     "- Dla 3 bitów szum ten jest już dobrze widoczny, zwłaszcza na fragmentach obrazu o jednolitym kolorze. W tym przypadku na niebie i powierzchni po prawej stronie obrazu.\n",
-    "- Dla 4 bitów szum ten jest jescze bardziej widoczny. Widać teraz także wyraźnie granicę, gdzie zakodowane dane się skończyły. W celu zmniejszenia podejrzeń o istnieniu osadzonych danych, warto jest zakodować tekst na całej powierzchni obrazu."
+    "- Dla 4 bitów szum jest jeszcze bardziej widoczny. Widać teraz także wyraźnie granicę, gdzie zakodowane dane się skończyły. W celu zmniejszenia podejrzeń o istnieniu osadzonych danych, warto byłoby zakodować tekst na całej powierzchni obrazu."
    ]
   }
  ],
